<resources>
    <string name="app_name">Weather_MVVM</string>
    <string name="bottom_nav_menu_today">Today</string>
    <string name="bottom_nav_menu_5_days">5 Days</string>
    <string name="bottom_nav_menu_settings">Settings</string>
    <string name="preferences_menu_country">Country</string>
    <string name="preferences_menu_location">Location</string>
    <string name="preferences_menu_device_location">Use device location</string>
    <string name="preferences_menu_summary_device_location">Allow the app to get your location</string>
    <string name="preferences_menu_summary_location">The location for which the weather is displayed</string>
    <string name="preferences_menu_summary_country">The country of location for which the weather is displayed</string>
    <string name="loading">Loading</string>

    <string name="Weather_Location">Weather Location</string>
    <string name="Los_Angeles">Los Angeles</string>
    <string name="USE_DEVICE_LOCATION">USE_DEVICE_LOCATION</string>
    <string name="Please_set_location_manually">Please, set location manually in settings</string>
    <string name="Curtoday">Today</string>
    <string name="CurPreciptiation">Preciptiation</string>
    <string name="CurWind">Wind</string>
    <string name="CurVisibility">Visibility</string>
    <string name="CurSunrise">Sunrise</string>
    <string name="CurSunset">Sunset</string>
    <string name="Next5Days">Next 5 Days</string>
    <string name="futMin">Min</string>
    <string name="futMax">Max</string>
    <string name="futPressure">Pressure</string>
    <string name="futWindSpeed">Wind speed</string>
    <string name="futVisibility">Visibility</string>
    <string name="futUV">UV</string>
    <string name="North">N</string>
    <string name="NorthNorthEast">NNE</string>
    <string name="NorthEast">NE</string>
    <string name="EastNorthEast">ENE</string>
    <string name="East">E</string>
    <string name="EastSouthEast">ESE</string>
    <string name="SouthEast">SE</string>
    <string name="SouthSouthEast">SSE</string>
    <string name="South">S</string>
    <string name="SouthSouthWest">SSW</string>
    <string name="SouthWest">SW</string>
    <string name="WestSouthWest">WSW</string>
    <string name="West">W</string>
    <string name="WestNothWest">WNW</string>
    <string name="NorthWest">NW</string>
    <string name="NorthNorthWest">NNW</string>
    <string name="prefUnits">Units</string>
    <string name="prefMetric">METRIC</string>
    <string name="prefUnitSystem">Unit system</string>
    <string name="curFeelslike">Feels like</string>
    <string name="prefSettings">Settings</string>
    <string name="List_of_weather">List of weather</string>
    <string name="Weather_details">Weather detail\'s</string>
    <string name="noInternet">device is connected to the internet</string>
    <string name="internetGood">device is connected to the internet</string>
</resources>
